@@ -1,3 +1,9 @@
+2012-05-03  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/53187
+	* gcc.target/arm/pr53187.c: New test.
+	* gcc.c-torture/compile/pr53187.c: New test.
+
 2012-05-03  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/53144
