@@ -1,3 +1,9 @@
+2012-05-03  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/53187
+	* config/arm/arm.c (arm_select_cc_mode): If x has MODE_CC class
+	mode, return that mode.
+
 2012-05-03  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/53144
